Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19303

CouchKVStore::getAllKeys does not log pretty error string / OS error on error response of couchstore_all_docs

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 3.1.5, 4.1.1, 4.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • No

    Description

      1
              errCode = couchstore_all_docs(db, &ref, COUCHSTORE_NO_DELETES,
      2
                                            populateAllKeys,
      3
                                            static_cast<void *>(&ctx));
      4
              closeDatabaseHandle(db);
      5
              if (errCode == COUCHSTORE_SUCCESS ||
      6
                      errCode == COUCHSTORE_ERROR_CANCEL)  {
      7
                  return ENGINE_SUCCESS;
      8
              } else {
      9
                  logger.log(EXTENSION_LOG_WARNING, "couchstore_all_docs failed for "
      10
                             "database file of vbucket = %d rev = %" PRIu64 ", "
      11
                             "errCode = %u", vbid, rev, errCode);
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            will.gardner Will Gardner (Inactive)
            will.gardner Will Gardner (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty