MB-19303 Use error string and OS error for CouchKVStore::getAllKeys

Previously just the error number was logged which is hard to read
and does not include the OS error in the event of an os-level issue.

This change amends this by making logging follow the rest of
CouchKVStore and get those two bits.

Change-Id: I911fce68738495271b667ba59b255b8c01949d79
Reviewed-on: http://review.couchbase.org/63740
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>